--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,17 @@
 header {
-  display: block;
-  height: 40px;
-  padding-left: 15px;
-  padding-top: 15px;
-  font-size: 24px;
-  border-bottom: 4px solid #ffa500;
-  background-color: rgba(33,33,33,0.5);
+  display: flex;
+  background: #4e54c8; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right,
+    #8f94fb,
+    #4e54c8
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #8f94fb,
+    #4e54c8
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
   color: #fff;
 }
 
@@ -14,8 +20,38 @@ header {
   height: 100%;
   flex-direction: column;
 }
+
 main {
   display: flex;
   flex-direction: column;
   flex-grow: 1;
+}
+
+.editor {
+  display: flex;
+	flex-direction: column;
+}
+
+.title {
+  font-size: 2rem;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
+.bold {
+  font-weight: bold;
+}
+
+.italic {
+  font-style: italic;
+}
+
+.underlined {
+  text-decoration: underline;
+}
+
+@media all and (min-width: 601px) {
+  .editor {
+    flex-direction: row;
+  }
 }
