--- a/src/App.css
+++ b/src/App.css
@@ -50,6 +50,10 @@ main {
   text-decoration: underline;
 }
 
+.underlined span {
+	text-decoration: none!important;
+}
+
 @media all and (min-width: 601px) {
   .editor {
     flex-direction: row;
